[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weiclawpy"
version = "0.1.0"
description = "远程连接微信与 OpenCode | Connect WeChat to OpenCode"
readme = "README.md"
long_description_content_type = "text/markdown"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Ming" },
]
keywords = ["wechat", "opencode", "ai", "bridge", "weixin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pycryptodome>=3.20.0",
    "qrcode>=7.4.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/Ming0Liu/weiclawpy"
Repository = "https://github.com/Ming0Liu/weiclawpy"
BugTracker = "https://github.com/Ming0Liu/weiclawpy/issues"

[project.scripts]
weiclawpy = "weiclawpy.__main__:main"

[tool.setuptools.packages.find]
include = ["weiclawpy*"]
